Add projections of sale orders to improve query performance